--- a/plugin.xml
+++ b/plugin.xml
@@ -31,8 +31,8 @@
      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-feature android:name="android.hardware.camera2"/>
-    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera2" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
     </config-file>
 
 <source-file src="src/android/cls/MainActivity.java" target-dir="src/mirimmedialab/co/kr/mboxcamera/cls" />
